[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GeoNLPlify"
version = "0.1.0"
authors = [
  { name="Rémy Decoupes", email="remy.decoupes@inrae.fr" },
]
description = "A NLP library for data augmentation focusing on spatial information contained in text."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU General Public License v3.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/remydecoupes/GeoNLPlify"
"Bug Tracker" = "https://github.com/remydecoupes/GeoNLPlify/issues"
"Documentation" = "https://geonlplify.readthedocs.io/en/latest/"